compare hotspot and openj9 in java 8 and 11